# github-analysis-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/agents/: __init__.py  github_agent.py  mcp_client.py
src/core/: __init__.py  config.py  context_manager.py  models.py
src/utils/: __init__.py  token_counter.py  validators.py
