[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-analysis-agent"
version = "0.1.0"
description = "AI Agent for GitHub repository analysis using LangGraph + LangChain + LangSmith"
authors = [{name = "Yahya Sayed", email = "muqatil7@github.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/muqatil7/github-analysis-agent"
"Repository" = "https://github.com/muqatil7/github-analysis-agent.git"
"Issues" = "https://github.com/muqatil7/github-analysis-agent/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
python_files = "tests/*.py"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"